<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="25dp"
    android:paddingVertical="20dp">

    <LinearLayout
        android:id="@+id/collapseSettings"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="start">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collapse_menu_after"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/collapseSeconds"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorOnSecondary"
            android:ems="3"
            android:gravity="end"
            android:inputType="numberDecimal"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="s"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center|start">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zoom"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="20sp" />

        <com.google.android.material.slider.Slider
            android:id="@+id/densityScale"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:stepSize="0.1"
            android:value="1"
            android:valueFrom="0.3"
            android:valueTo="2.5" />
    </LinearLayout>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/densityAuto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/adapt_content"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center|start">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backdrop_dim"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="20sp" />

        <com.google.android.material.slider.Slider
            android:id="@+id/dimAmount"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:stepSize="0.1"
            android:value="0"
            android:valueFrom="0"
            android:valueTo="1" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tasks"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/recordTask"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/record_task"
        app:icon="@drawable/rounded_stop_circle_24" />

</LinearLayout>